# mercurio-sysml-ui

./: .gitignore  Cargo.toml  LICENSE  README.md  SOFTWARE_DESIGN.txt  package-lock.json  package.json
docs/: AI_BUILD_PLAN.md  CACHE_FIRST_STARTUP_SEQUENCE_PLAN.md  SEMANTIC_AUTHORITY.md  UI_CORE_BOUNDARY_PLAN.md
mercurio-application/: .gitignore  Cargo.toml  build.rs  project.schema.json  run_backtrace.sh  tauri.conf.json
mercurio-application-ui/: package-lock.json  package.json  vite.config.ts
mercurio-application/capabilities/: default.json
mercurio-application/icons/: icon.icns
mercurio-application/llm/: hints.json  instructions.md
mercurio-application/src/: agent.rs  compile.rs  fs_ops.rs  lib.rs  llm.rs  logging.rs  main.rs  parse.rs  paths.rs  rag.rs  stdlib.rs  symbols.rs  types.rs
mercurio-application/src/commands/: ai.rs  core.rs  diagram.rs  fs_ops.rs  git.rs  mod.rs  stdlib.rs  tools.rs  window.rs
mercurio-application/src/commands/semantic_edit/: context.rs  mod.rs  preview.rs  registry.rs  types.rs
mercurio-application/src/commands/semantic_edit/actions/: add_attribute.rs  add_part_definition.rs  add_part_usage.rs  mod.rs  move_symbol_to_package.rs  rename_symbol.rs  set_part_primitive.rs  set_part_type.rs
mercurio-application/stdlib-packaged/: manifest.json
mercurio-application/wix/: path-env.wxs
mercurio-cli/: Cargo.toml
mercurio-core/: Cargo.toml
mercurio-core/src/: compile.rs  export.rs  files.rs  index_contract.rs  lib.rs  metamodel.rs  project.rs  project_model.rs  project_model_seed.rs  project_model_transform.rs  project_root_key.rs  semantic.rs  settings.rs  state.rs  stdlib.rs  symbol_index.rs  symbol_properties.rs  symbols.rs  syster_host.rs  workspace.rs  workspace_ir_cache.rs  workspace_symbols.rs  workspace_tree.rs
mercurio-core/tests/: property_sections_regression.rs
mercurio-frontend/: ai-chat.js  ai-endpoints.js  ai.js  diagram.js  errors.css  errors.js  index.html  main.js  styles.css
mercurio-frontend-react/: index.html  package-lock.json  package.json
(+130 files in other folders)
