[package]
name = "mercurio-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syster = { package = "syster-base", version = "0.3.5-alpha", features = ["interchange"] }
mercurio-model = { path = "..\\mercurio-model" }
mercurio-semantic = { path = "..\\mercurio-semantic" }
